auto-test/tests/chapter_16/invalid_parse/extra_credit/character_const_goto.c

int main(void) {
    goto 'x';
    'x';
    return 0;
}